// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux reducers returns initial state when action type is unrecognized 1`] = `
Object {
  "alert": null,
  "didAddRoute": false,
  "editingStepId": null,
  "error": null,
  "isCreatingStop": false,
  "routes": Array [
    1,
  ],
  "stops": Array [
    Object {
      "address": "test123",
      "completed": false,
      "id": 1,
      "name": "test",
      "verified": true,
    },
  ],
}
`;

exports[`redux reducers returns the correct state when COMPLETION_OF_STOP is reduced 1`] = `
Object {
  "alert": null,
  "didAddRoute": false,
  "editingStepId": null,
  "error": null,
  "isCreatingStop": false,
  "routes": Array [
    1,
  ],
  "stops": Object {
    "0": Object {
      "address": "test123",
      "completed": false,
      "id": 1,
      "name": "test",
      "verified": true,
    },
    "1": Object {
      "address": "test123",
      "completed": true,
      "id": 1,
      "name": "test",
      "verified": false,
    },
  },
}
`;

exports[`redux reducers returns the correct state when DELETE_STOP is reduced 1`] = `
Object {
  "alert": null,
  "didAddRoute": false,
  "editingStepId": null,
  "error": null,
  "isCreatingStop": false,
  "routes": Array [
    1,
  ],
  "stops": Object {
    "0": Object {
      "address": "test123",
      "completed": false,
      "id": 1,
      "name": "test",
      "verified": true,
    },
  },
}
`;

exports[`redux reducers returns the correct state when UPDATE_STOP is reduced 1`] = `
Object {
  "alert": false,
  "didAddRoute": false,
  "editingStepId": null,
  "error": false,
  "isCreatingStop": false,
  "routes": Array [
    1,
  ],
  "stops": Object {
    "0": Object {
      "address": "test123",
      "completed": false,
      "id": 1,
      "name": "test",
      "verified": true,
    },
    "1": Object {
      "address": "testabc",
      "completed": false,
      "id": 1,
      "name": "something new",
      "verified": false,
    },
  },
}
`;
